objects/kugo2p__OrderLineGroup__c.object
<CustomObject>
    <description>Kugamon - Related object to Order that stores that group details for Order Product Lines and Order Service Lines.</description>
    <fields>
        <fullName>QuoteLineGroupId__c</fullName>
        <description>The corresponding CPQ Quote Line Group Id this record was created from</description>
        <externalId>true</externalId>
        <inlineHelpText>The corresponding CPQ Quote Line Group Id this record was created from</inlineHelpText>
        <label>QuoteLineGroupId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>kugo2p__Favorite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Favorite Group associated with Line Group</inlineHelpText>
        <label>Favorite</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>kugo2p__Favorite__c.kugo2p__IsGroup__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>kugo2p__Favorite__c</referenceTo>
        <relationshipLabel>Order Line Groups</relationshipLabel>
        <relationshipName>Order_Line_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__GroupDescription__c</fullName>
        <label>Group Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>kugo2p__PrintGroupDescription__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Print Group Description</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__SalesOrder__c</fullName>
        <label>Order Number</label>
        <referenceTo>kugo2p__SalesOrder__c</referenceTo>
        <relationshipLabel>Order Line Groups</relationshipLabel>
        <relationshipName>Order_Line_Groups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>kugo2p__SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Order Line Group</label>
    <nameField>
        <label>Order Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Line Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>